2004-02-12  Jordi Mallach  <jordi@sindominio.net>

	* src/gnome-mud.c (main): Set the default application window using
	the new icon.

	* NEWS: Set release date.
	* configure.ac: Release gnome-mud 0.10.5.

2004-02-12  Jordi Mallach  <jordi@sindominio.net>

	* BUGS: Remove (old) items, just leave the Bugzilla pointer.
	* NEWS: Update for 0.10.5.

2004-02-11  Jordi Mallach  <jordi@sindominio.net>

	* src/window.c (terminal_feed): Revert last patch, doesn't work well.
	* src/net.c (connection_send_data): Patch from
	Juliano Ravasi Ferraz <jferraz@linkway.com.br>, convert all input
	text to the current locale before sending. Solves bad display on
	non-UTF-8 muds. Fixes bug #133517.

2004-02-11  Robin Ericsson  <lobbin@localhost.nu>

	* src/window.c (terminal_feed): Convert vte-feed-buffer from utf-8
	to locale fixing problem where user has a non-utf-8 locale.

2004-02-11  Jordi Mallach  <jordi@sindominio.net>

	* src/pixmaps/gnome-mud.png, src/pixmaps/gnome-mud-tray-icon.png,
	src/svg/gnome-mud.svg: New gnome-mud icon, courtesy of Daniel Taylor,
	thanks!
	* src/pixmaps/Makefile.am: Add new icons, and install gnome-mud.png in
	the general pixmapsdir.
	* src/tray.c (tray_update_icon): Use the new tray icon.
	* src/init.c (window_menu_help_about): Use new app icon.
	* gnome-mud.desktop.in: Likewise.

	* src/python.c: Placate silly warning.

	* src/init.c (window_menu_help_about): Add Adam, Nuno and Daniel to
	the credits dialog.

	* configure.ac: Fix AM_INIT_AUTOMAKE.
	* autogen.sh: Require automake >= 1.6.

2004-01-27  Robin Ericsson  <lobbin@localhost.nu>

	* ROADMAP: Removed some entries we've fixed. Whohoo!! :)

	* src/net.c (make_connection): Compile-fix for lost part of Adams
	patch from yesterday.

2004-01-26  Jordi Mallach  <jordi@sindominio.net>

	* src/python.c (pyConnection_equals): New function, still unfinished.
	(pyConnection_isFocus): New, return true if the connection object
	is the current focused connection; false otherwise. Patch by
	Adam Luchjenbroers.